[b]Version 0.6.5[/b]:

(2008-11-05)
 * Added support for another patch: 
   http://smplayer.svn.sourceforge.net/viewvc/smplayer/mplayer-builds/patches/id_exit.diff
   This patch allows the playlist to work properly even if the output messages 
   of mplayer are not in English.
 * New option for smplayer.ini: bypass_window_manager (section 
   [floating_control]). If set to true (the default), the floating control 
   widget will bypass the window manager (seems necessary for some window
   managers). You can try to set it to false if you have problems with the
   floating control.

(2008-11-04)
 * On startup the previous position of the main (default) window is checked
   if it's valid for the current screen. If it's not, then the window is
   moved to 0x0.
 * The same for the playlist (if it's not docked).

(2008-11-01)
 * Cleanup and reorganization of the config path code. 
   The commandline option -ini-path has been removed and replaced with
   -config-path, which specifies the directory where smplayer will store
   its data (not only smplayer.ini).
 * Now to know if a file has no video, instead of looking for the line 
   "Video: no video" (it's not reliable as it's a string that can be translated),
   it will check the video codec, if it's empty, there's no video.

(2008-10-30)
 * The reorganization of the subtitles section in preferences is finished.
 * The mplayer devs have added the -volume option in svn r27872, so now the
   hack to try to detect a patched mplayer have been removed. Now smplayer
   will simply use the -volume option if mplayer is r27872 or newer.

(2008-10-28)
 * The subtitles for srt, sub... formats when using the SSA/ASS library, 
   can now be more customized. It's possible to select the font, size,
   colors, bold, italic, outline, shadow... 
   Not finished yet.

(2008-10-27)
 * Added the new option "Correct pts" in Preferences->Advanced. Disabled by
   default because it causes some problems with mkv files.